force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Task_Txn_History__c/BMCServiceDesk__SLA_Milestone_Task_Txn_History__c.object-meta.xml
<CustomObject>
    <description>Stores the Task milestones that are achieved or canceled for a service transaction.</description>
    <label>SLA Milestone Task History</label>
    <nameField>
        <label>SLA Milestone Task History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Milestone Task History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>