force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Task_Txn_History__c/fields/BMCServiceDesk__Error__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Error__c</fullName>
    <label>Error</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>