force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Task_Txn_History__c/fields/BMCServiceDesk__FKTask__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>BMCServiceDesk__Task__c</referenceTo>
    <relationshipLabel>SLA Milestone Task History</relationshipLabel>
    <relationshipName>SLA_Milestone_Task_History</relationshipName>
    <type>Lookup</type>
</CustomField>