force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Task_Txn_History__c/fields/BMCServiceDesk__FKTask_Service_Target__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKTask_Service_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Service Target</label>
    <referenceTo>BMCServiceDesk__Task_Service_Target__c</referenceTo>
    <relationshipLabel>SLA Milestone Task History</relationshipLabel>
    <relationshipName>SLA_Milestone_Task_History</relationshipName>
    <type>Lookup</type>
</CustomField>