force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Task_Txn_History__c/fields/BMCServiceDesk__SLA_Milestone_Condition__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SLA_Milestone_Condition__c</fullName>
    <label>SLA Milestone Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage of Time Elapsed</fullName>
            </value>
            <value>
                <fullName>Percentage of Time Remaining</fullName>
            </value>
            <value>
                <fullName>Service Target is Canceled</fullName>
            </value>
            <value>
                <fullName>Service Target is Met</fullName>
            </value>
            <value>
                <fullName>Service Target is Missed</fullName>
            </value>
            <value>
                <fullName>Service Target Warning Occurs</fullName>
            </value>
            <value>
                <fullName>Time Elapsed</fullName>
            </value>
            <value>
                <fullName>Time Remaining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>